# TextEditor

EditorSN/: CMakeLists.txt  LinkedList.h  Node.h  Operation.h  Stack.h  main.cpp
